fix bug with scroll, fix search modal on small phones

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -348,10 +348,10 @@
         height: 58px;
         padding: 8px 7px;
 
-        .burgerClose {
-        }
-        .logo {
-        }
+        // .burgerClose {
+        // }
+        // .logo {
+        // }
       }
 
       .sidebarNav {
